--- a/index.html
+++ b/index.html
@@ -71,10 +71,95 @@
     </header>
     <!-- Fin header -->
 
-    
-   <h2> Hola aqui va resto</h2>
+   <!-- inicio boton izquierdo-->
+   <div id="top">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="left-content">
+                    <div class="inner-content">
+                    <center>
+                        <h4>XpressArt</h4>
+                        <h6> TU MEJOR EXPERIENCIA </h6>
+                        <div class="main-white-button scroll-to-section">
+                            <a href="#reservation"> Reservar ahora </a>
+                        </div>
+                    </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="main-banner header-text">
+                    <div class="Modern-Slider">
+                      <!-- Item -->
+                      <div class="item">
+                        <div class="img-fill">
+                            <img src="assets/images/slide-01.jpg" alt="">
+                        </div>
+                      </div>
+                      <!-- // Item -->
+                      <!-- Item -->
+                      <div class="item">
+                        <div class="img-fill">
+                            <img src="assets/images/slide-02.jpg" alt="">
+                        </div>
+                      </div>
+                      <!-- // Item -->
+                      <!-- Item -->
+                      <div class="item">
+                        <div class="img-fill">
+                            <img src="assets/images/slide-03.jpg" alt="">
+                        </div>
+                      </div>
+                      <!-- // Item -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Fin boton izquierdo-->
 
-    
+
+<!-- sobre nosotros -->
+<section class="section" id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-xs-12">
+                <div class="left-text-content">
+                    <div class="section-heading">
+                        <h6> Sobre nosotros</h6>
+                        <h2> Tus recuerdos seran inolvidables </h2>
+                    </div>
+                    <p>Klassy Cafe is one of the best <a href="https://templatemo.com/tag/restaurant" target="_blank" rel="sponsored">restaurant HTML templates</a> with Bootstrap v4.5.2 CSS framework. You can download and feel free to use this website template layout for your restaurant business. You are allowed to use this template for commercial purposes. <br><br>You are NOT allowed to redistribute the template ZIP file on any template donwnload website. Please contact us for more information.</p>
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="assets/images/about-thumb-01.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img src="assets/images/about-thumb-02.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img src="assets/images/about-thumb-03.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-xs-12">
+                <div class="right-content">
+                    <div class="thumb">
+                        <a rel="nofollow" href="http://youtube.com"><i class="fa fa-play"></i></a>
+                        <img src="assets/images/about-video-bg.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- fin sobre nosotros -->
+
+
+
 
 
 
