--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
     </header>
     <!-- Fin header -->
 
+
+<!--Boton volver arriba -->
+<a class="ir-arriba"  javascript:void(0) title="Volver arriba">
+    <span class="fa-stack">
+      <i class="fa fa-circle fa-stack-2x"></i>
+      <i class="fa fa-arrow-up fa-stack-1x fa-inverse"></i>
+    </span>
+  </a>
+
    <!-- inicio boton izquierdo-->
    <div id="top">
     <div class="container-fluid">
@@ -165,7 +174,7 @@
             <div class="col-lg-4">
                 <div class="section-heading">
                     <h6>Nuestro Menú</h6>
-                    <h2> MENÚ COMPLETO <a href="menu.html">AQUÍ </a> </h2>
+                    <h2> VER MENÚ <a href="menu.html">AQUÍ </a> </h2>
                 </div>
             </div>
         </div>
