--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <h4>XpressArt</h4>
                         <h6> TU MEJOR EXPERIENCIA </h6>
                         <div class="main-white-button scroll-to-section">
-                            <a href="#reservation"> Reservar ahora </a>
+                            <a href="https://wa.me/qr/ENXYGLP4JAXZP1"> Reservar ahora </a>
                         </div>
                     </center>
                     </div>
@@ -117,7 +117,7 @@
                       <!-- Item -->
                       <div class="item">
                         <div class="img-fill">
-                            <img src="assets/images/slide-03.jpg" alt="">
+                            <img src="assets/images/slide-03.png" alt="">
                         </div>
                       </div>
                       <!-- // Item -->
@@ -138,9 +138,10 @@
                 <div class="left-text-content">
                     <div class="section-heading">
                         <h6> Sobre nosotros</h6>
-                        <h2> Tus recuerdos seran inolvidables </h2>
+                        <h2> Hacemos que las cosas se hagan realidad </h2>
                     </div>
-                    <p>Klassy Cafe is one of the best <a href="#" target="_blank" rel="sponsored">restaurant HTML templates</a> with Bootstrap v4.5.2 CSS framework. You can download and feel free to use this website template layout for your restaurant business. You are allowed to use this template for commercial purposes. <br><br>You are NOT allowed to redistribute the template ZIP file on any template donwnload website. Please contact us for more information.</p>
+                    <p><b>XpressArt</b> es un negocio que va más allá de ofrecer comida: es un espacio diseñado para compartir momentos con amigos, trabajar cómodamente con tu computadora y disfrutar de una atmósfera libre. Ofrece una variedad de alimentos y bebidas de calidad en un entorno acogedor que fomenta la creatividad y la conexión humana. Ya sea para socializar, trabajar o relajarse, XpressArt proporciona una experiencia única que combina la hospitalidad con la modernidad.
+                        </p>
                     <div class="row">
                         <div class="col-4">
                             <img src="assets/images/about-thumb-01.jpg" alt="">
@@ -158,7 +159,7 @@
                 <div class="right-content">
                     <div class="thumb">
                         <a rel="nofollow" href="http://youtube.com"><i class="fa fa-play"></i></a>
-                        <img src="assets/images/about-video-bg.jpg" alt="">
+                        <img src="assets/images/about-video-bg.gif" alt="">
                     </div>
                 </div>
             </div>
@@ -345,7 +346,7 @@
                             <div class="phone">
                                 <i class="fa fa-phone"></i>
                                 <h4> Contactos </h4>
-                                <span><a href="#">WSP: <B>3247115379</B> </a><br><a href="#">CEL: <b>3145189238</b> </a></span>
+                                <span><a href="#">Whatsapp: <B>3247115379</B> </a><br><a href="#">Celular: <b>3145189238</b> </a></span>
                             </div>
                         </div>
                         <div class="col-lg-6">
