--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                       <!-- Item -->
                       <div class="item">
                         <div class="img-fill">
-                            <img src="assets/images/slide-03.png" alt="">
+                            <img src="assets/images/slide-03.jpg" alt="">
                         </div>
                       </div>
                       <!-- // Item -->
