actualizacion menu slide

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="col-lg-6 col-md-6 col-xs-12">
                 <div class="right-content">
                     <div class="thumb">
-                        <a rel="nofollow" href="http://youtube.com"><i class="fa fa-play"></i></a>
+                        <a rel="nofollow" href="https://www.facebook.com/reel/374618701748542"><i class="fa fa-play"></i></a>
                         <img src="assets/images/about-video-bg.gif" alt="">
                     </div>
                 </div>
@@ -185,10 +185,11 @@
             <div class="owl-menu-item owl-carousel">
                 <div class="item">
                     <div class='card card1'>
-                        <div class="price"><h6>$14</h6></div>
+                        <div class="price"><h6>$ 8K</h6></div>
                         <div class='info'>
-                          <h1 class='title'>Chocolate Cake</h1>
-                          <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
+                          <h1 class='title'> Salchipapas </h1>
+                          <p class='description'> Papas - Maduro - Salchichas - Chorizo artesanal - Queso. 
+                            <br> - Precios: $ 5k, 8k y 12k </p>
                           <div class="main-text-button">
                               <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
                           </div>
@@ -197,10 +198,13 @@
                 </div>
                 <div class="item">
                     <div class='card card2'>
-                        <div class="price"><h6>$22</h6></div>
+                        <div class="price"><h6>$ 3k</h6></div>
                         <div class='info'>
-                          <h1 class='title'>Klassy Pancake</h1>
-                          <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
+                          <h1 class='title'> Hervidos </h1>
+                          <p class='description'> Lulo - Mora - Maracuyá. 
+                            <br> Puedes solicitar: 
+                            <br> - Personal de $ 3k 
+                            <br> - Jarra de $ 10k y $ 15k.</p>
                           <div class="main-text-button">
                               <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
                           </div>
@@ -209,22 +213,23 @@
                 </div>
                 <div class="item">
                     <div class='card card3'>
-                        <div class="price"><h6>$18</h6></div>
+                        <div class="price"><h6>$ 7k</h6></div>
                         <div class='info'>
-                          <h1 class='title'>Tall Klassy Bread</h1>
-                          <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
+                          <h1 class='title'> Perros Calientes </h1>
+                          <p class='description'> Pan - Salchicha - Papa - Maduro -Chorizo - Queso - Ripio - Salsas. 
+                            <br> - Dobre y especial </p>
                           <div class="main-text-button">
-                              <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
+                              <div class="scroll-to-section"></div>
                           </div>
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class='card card4'>
-                        <div class="price"><h6>$10</h6></div>
+                        <div class="price"><h6>$ 22K</h6></div>
                         <div class='info'>
-                          <h1 class='title'>Blueberry CheeseCake</h1>
-                          <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
+                          <h1 class='title'> Picadas </h1>
+                          <p class='description'> Papas - Maduro - Plátano - Salchichas -Chorizos - Queso Doble - Tocino - Ripio -Salsas.</p>
                           <div class="main-text-button">
                               <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
                           </div>
@@ -233,10 +238,10 @@
                 </div>
                 <div class="item">
                     <div class='card card5'>
-                        <div class="price"><h6>$8.50</h6></div>
+                        <div class="price"><h6>$ 6k</h6></div>
                         <div class='info'>
-                          <h1 class='title'>Klassy Cup Cake</h1>
-                          <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
+                          <h1 class='title'>Arepas rellenas</h1>
+                          <p class='description'>Pan - Salchicha - Papa - Maduro - Chorizo -Queso - Ripio - Salsas.</p>
                           <div class="main-text-button">
                               <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
                           </div>
@@ -245,14 +250,15 @@
                 </div>
                 <div class="item">
                     <div class='card card3'>
-                        <div class="price"><h6>$7.25</h6></div>
+                        <div class="price"><h6>$ 7k</h6></div>
                         <div class='info'>
-                          <h1 class='title'>Klassic Cake</h1>
-                          <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
-                          <div class="main-text-button">
-                              <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
+                            <h1 class='title'> Perros Calientes </h1>
+                            <p class='description'> Pan - Salchicha - Papa - Maduro -Chorizo - Queso - Ripio - Salsas. 
+                              <br> - Dobre y especial </p>
+                            <div class="main-text-button">
+                                <div class="scroll-to-section"></div>
+                            </div>
                           </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -286,8 +292,8 @@
                         <img src="assets/images/chefs-01.jpg" alt="Chef #1">
                     </div>
                     <div class="down-content">
-                        <h4>Randy Walker</h4>
-                        <span> Visitas frecuentes</span>
+                        <h4> Bebidas únicas </h4>
+                        <span> Disfruta del buen sabor.  </span>
                     </div>
                 </div>
             </div>
@@ -303,8 +309,8 @@
                         <img src="assets/images/chefs-02.jpg" alt="Chef #2">
                     </div>
                     <div class="down-content">
-                        <h4>David Martin</h4>
-                        <span> Visitas frecuentes</span>
+                        <h4> Para llevar </h4>
+                        <span> Solicítalo y llegamos a tiempo. </span>
                     </div>
                 </div>
             </div>
@@ -320,8 +326,8 @@
                         <img src="assets/images/chefs-03.jpg" alt="Chef #3">
                     </div>
                     <div class="down-content">
-                        <h4>Peter Perkson</h4>
-                        <span> Visitas frecuentes</span>
+                        <h4> En compañia </h4>
+                        <span> Vista espectacular, amigos y música.</span>
                     </div>
                 </div>
             </div>
