detalles de informacion

--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
                           <p class='description'> Pan - Salchicha - Papa - Maduro -Chorizo - Queso - Ripio - Salsas. 
                             <br> - Dobre y especial </p>
                           <div class="main-text-button">
-                              <div class="scroll-to-section"></div>
+                              <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
                           </div>
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class='card card4'>
-                        <div class="price"><h6>$ 22K</h6></div>
+                        <div class="price"><h6>$ 12K</h6></div>
                         <div class='info'>
                           <h1 class='title'> Picadas </h1>
                           <p class='description'> Papas - Maduro - Plátano - Salchichas -Chorizos - Queso Doble - Tocino - Ripio -Salsas.</p>
@@ -241,7 +241,8 @@
                         <div class="price"><h6>$ 6k</h6></div>
                         <div class='info'>
                           <h1 class='title'>Arepas rellenas</h1>
-                          <p class='description'>Pan - Salchicha - Papa - Maduro - Chorizo -Queso - Ripio - Salsas.</p>
+                          <p class='description'>Pan - Salchicha - Papa - Maduro - Chorizo -Queso - Ripio - Salsas. 
+                            <br> - Desde $ 6.000 </p>
                           <div class="main-text-button">
                               <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
                           </div>
@@ -254,7 +255,7 @@
                         <div class='info'>
                             <h1 class='title'> Perros Calientes </h1>
                             <p class='description'> Pan - Salchicha - Papa - Maduro -Chorizo - Queso - Ripio - Salsas. 
-                              <br> - Dobre y especial </p>
+                              <br> - Pidelas Doble y especial. </p>
                             <div class="main-text-button">
                                 <div class="scroll-to-section"></div>
                             </div>
