--- a/index.html
+++ b/index.html
@@ -286,9 +286,8 @@
                     <div class="thumb">
                         <div class="overlay"></div>
                         <ul class="social-icons">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/XpressArtv"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/xpressartv"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                         <img src="assets/images/chefs-01.jpg" alt="Chef #1">
                     </div>
@@ -303,9 +302,8 @@
                     <div class="thumb">
                         <div class="overlay"></div>
                         <ul class="social-icons">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                            <li><a href="https://www.facebook.com/XpressArtv"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/xpressartv"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                         <img src="assets/images/chefs-02.jpg" alt="Chef #2">
                     </div>
@@ -320,9 +318,8 @@
                     <div class="thumb">
                         <div class="overlay"></div>
                         <ul class="social-icons">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google"></i></a></li>
+                            <li><a href="https://www.facebook.com/XpressArtv"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/xpressartv"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                         <img src="assets/images/chefs-03.jpg" alt="Chef #3">
                     </div>
