--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
                         <h4>XpressArt</h4>
                         <h6> TU MEJOR EXPERIENCIA </h6>
                         <div class="main-white-button scroll-to-section">
-                            <a href="https://wa.me/qr/ENXYGLP4JAXZP1"> Reservar ahora </a>
+                            <a href="https://wa.me/573247115379/?text=Hola, quisiera pedir algo..." target="_blank"><img src="assets/images/whatsapp.png" width="30" height="30"> &nbsp; Comunicarme </a>
                         </div>
+
                     </center>
                     </div>
                 </div>
