--- a/menu.html
+++ b/menu.html
@@ -110,7 +110,9 @@
                                 <div class="phone">
                                     <i class="fa fa-phone"></i>
                                     <h4> Contactos </h4>
-                                    <span><a href="#">WSP: <B>3247115379</B> </a><br><a href="#">CEL: <b>3145189238</b> </a></span>
+                                    <span><a href="https://wa.me/573247115379/?text=Hola, quisiera pedir algo..." target="_blank">Whatsapp:
+                                        <B>3247115379</B> </a><br>
+                                        <a href="tel:+573145189238">Celular: <b>3145189238</b> </a></span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
