--- a/menu.html
+++ b/menu.html
@@ -11,9 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <title> XpressArt - Menú </title>
-<!--
 
--->
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
