--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <title> XpressArt - Gastrobar</title>
 
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <!-- importaciones CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
